derive_everything/tests/fail/enum.stderr
error: no default declared
 --> tests/fail/enum.rs:3:1
  |
3 | #[derive_everything]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: make a unit variant default by placing `#[default]` above it
  = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)
